--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -10,7 +10,7 @@
         "format": "{:%I:%M}"
     },
     "battery": {
-        "format": " {icon}\n{capacity}%",
+        "format": " {icon}  {capacity}%",
         "format-icons": ["", "", "", "", ""]
     },
     "pulseaudio": {
