--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,7 +4,7 @@
     "spacing": 8,
     "height": 10,
     "modules-left": ["clock#time", "sway/workspaces"],
-    //"modules-center": ["hyprland/window"],
+    //"modules-center": ["sway/window"],
     "modules-right": ["tray", "battery", "pulseaudio", "memory", "clock#cal"],
     "clock#time": {
         "format": "{:%I:%M}"
