swaylock new wallpaper dir

--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,2 +1,2 @@
-image=/home/hamu/dotfiles/wallpapers/biscuitDark/ethiopianBiscuit.png
+image=~/wallpaperDot/biscuitDark/ethiopianBiscuit.png
 indicator-idle-visible
