--- a/.config/sway/config
+++ b/.config/sway/config
@@ -60,6 +60,7 @@ for_window [app_id="imv"] floating toggle
 for_window [app_id="blueman-manager"] floating toggle
 for_window [app_id="Slack"] floating toggle
 for_window [app_id="localsend"] floating toggle
+for_window [instance="bauh"] floating toggle
 
 ### Appearance
 gaps inner 15
@@ -70,7 +71,9 @@ client.focused          $ac1     $ac1     $fg1     $ac2     $ac1
 client.focused_inactive $bg2     $bg2     $fg1     $ac2     $bg2
 client.unfocused        $bg2     $bg1     $fg1     $ac2     $bg2
 
-font Fira Sans 11
+font Fira Sans Bold 12
+
+titlebar_padding 18 6
 
 ## Key bindings
 bindsym $mod+Return exec $term
