--- a/.config/sway/config
+++ b/.config/sway/config
@@ -75,6 +75,8 @@ font Fira Sans Bold 12
 
 titlebar_padding 18 6
 
+for_window [title="."] title_format "%app_id | %title"
+
 ## Key bindings
 bindsym $mod+Return exec $term
 
