--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,8 +1,9 @@
 {
     "layer": "top",
-    "position": "top",
+    "position": "bottom",
+    "width": 1000,
     "spacing": 8,
-    "height": 10,
+    "height": 25,
     "modules-left": ["clock#time", "sway/workspaces"],
     //"modules-center": ["sway/window"],
     "modules-right": ["tray", "battery", "pulseaudio", "memory", "clock#cal"],
