--- a/.config/sway/config
+++ b/.config/sway/config
@@ -100,6 +100,10 @@ bindsym $mod+Shift+p exec ~/scriptsDot/powermenu.sh
 bindsym $mod+Control+1 exec firefox
 bindsym $mod+Control+2 exec thunar
 
+bindsym $mod+c move absolute position center
+bindsym $mod+g resize set width 60 ppt
+bindsym $mod+Shift+g resize set width 85 ppt height 85 ppt
+
 # Super + leftMouse = moveWindow
 # Super + rightMouse = resizeWindow
 floating_modifier $mod normal
@@ -160,6 +164,7 @@ bindsym $mod+Shift+f floating toggle
 bindsym $mod+f focus mode_toggle
 
 bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus child
 
 # Scratchpad
 bindsym $mod+s scratchpad show
