--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,8 +4,8 @@
     "width": 1000,
     "spacing": 8,
     "modules-left": ["clock#time", "sway/workspaces"],
-    //"modules-center": ["sway/window"],
-    "modules-right": ["tray", "battery", "pulseaudio", "memory", "clock#cal"],
+    "modules-center": ["battery", "pulseaudio", "memory"],
+    "modules-right": ["tray", "clock#cal"],
     "tray": {
         "spacing": 6
     },
