--- a/.config/sway/config
+++ b/.config/sway/config
@@ -8,6 +8,7 @@ exec nm-applet --indicator &
 exec blueman-applet &
 exec syncthing &
 exec wl-paste --watch cliphist store &
+exec pactl load-module module-switch-on-connect
 
 ### Variables
 set $mod Mod4
@@ -56,22 +57,18 @@ bindgesture swipe:left workspace next
 ### Window Rules
 for_window [app_id=".*"] border normal 3
 
-for_window [instance="spotify"] move scratchpad
-for_window [instance="signal"] move scratchpad
-for_window [app_id="ncspot"] move scratchpad
-
-for_window [app_id="imv"] floating toggle
-for_window [app_id="blueman-manager"] floating toggle
-for_window [app_id="Slack"] floating toggle
-for_window [app_id="localsend"] floating toggle
-for_window [app_id="org.telegram.desktop"] floating toggle
-for_window [app_id="thunar"] floating toggle
-for_window [app_id="xdg-desktop-portal-gtk"] floating toggle
-for_window [app_id="kittyf"] floating toggle
-for_window [instance="bauh"] floating toggle
-for_window [instance="steamwebhelper"] floating toggle
-for_window [instance="discord"] floating toggle
-for_window [instance="armcord"] floating toggle
+for_window [app_id="imv"] floating enable
+for_window [app_id="blueman-manager"] floating enable
+for_window [app_id="Slack"] floating enable
+for_window [app_id="localsend"] floating enable
+for_window [app_id="org.telegram.desktop"] floating enable
+for_window [app_id="thunar"] floating enable
+for_window [app_id="xdg-desktop-portal-gtk"] floating enable
+for_window [app_id="kittyf"] floating enable
+for_window [app_id="python3"] floating enable
+for_window [instance="steamwebhelper"] floating enable
+for_window [instance="discord"] floating enable
+for_window [instance="armcord"] floating enable
 
 ### Appearance
 gaps inner 15
@@ -101,7 +98,7 @@ bindsym $mod+Shift+p exec ~/scriptsDot/powermenu.sh
 bindsym $mod+Control+1 exec firefox
 bindsym $mod+Control+2 exec thunar
 
-bindsym $mod+c move absolute position center
+bindsym $mod+c move position center
 bindsym $mod+g resize set width 60 ppt
 bindsym $mod+Shift+g resize set width 85 ppt height 85 ppt
 
@@ -113,7 +110,7 @@ floating_modifier $mod normal
 bindsym $mod+Shift+c reload
 
 # Exit sway (logs you out of your Wayland session)
-bindsym $mod+Shift+e exec swaymsg exit
+bindsym $mod+Control+e exec swaymsg exit
 
 # Moving around
 bindsym $mod+$left focus left
