fish: added py alias, kitty: added window shortcuts, nvim: got colorizer options working and got softwrap working and replaced undotree with undo telescope and lazyloading rasi vim, swappy: added seconds to screenshot name, tofi: changed up colors, waybar: tweaked height and spacing

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,11 +7,17 @@ font_family FiraCodeNerdFont
 bold_font auto
 italic_font auto
 bold_italic_font auto
-
 font_size 12
 
+# Variables
 shell fish
-
 editor nvim
 
+# Layouts
 enabled_layouts tall:bias=60,grid,stack
+
+# Windows
+window_border_width 1.5pt
+map ctrl+shift+enter launch --cwd=current
+map ctrl+shift+. next_window
+map ctrl+shift+, previous_window
