--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,7 +2,8 @@
     "layer": "top",
     "position": "bottom",
     "width": 1000,
-    "spacing": 8,
+    "height": 30,
+    "spacing": 9,
     "modules-left": ["clock#time", "sway/workspaces"],
     "modules-center": ["battery", "pulseaudio", "memory"],
     "modules-right": ["tray", "clock#cal"],
