--- a/.config/swappy/config
+++ b/.config/swappy/config
@@ -1,6 +1,6 @@
 [Default]
 save_dir=$HOME/Pictures
-save_filename_format=sc%y-%m-%d_%H:%M.png
+save_filename_format=sc%y-%m-%d_%H:%M:%S.png
 show_panel=true
 line_size=5
 text_size=20
