--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -1,9 +1,7 @@
 ### Fonts
 	font = "Fira Sans"
 	font-size = 18
-
 	hint-font = true
-#
 
 ### Text theming
 	text-color = #DCC9BC
@@ -154,7 +152,7 @@
 	#
 	# Supported values: top-left, top, top-right, right, bottom-right,
 	# bottom, bottom-left, left, center.
-	anchor = center
+	anchor = bottom-left
 
 	# Set the size of the exclusive zone.
 	#
@@ -169,8 +167,8 @@
 	# Window offset from edge of screen. Only has an effect when anchored
 	# to the relevant edge. Can be pixels or a percentage.
 	margin-top = 0
-	margin-bottom = 0
-	margin-left = 0
+	margin-bottom = 120
+	margin-left = 90
 	margin-right = 0
 
 #
