zathura: biscuit recolor theme, waybar: workspace and battery indicator and full calendar when hovering, sway: brightness and titlebar tweaks

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -24,6 +24,7 @@
         "format": "󰍛 {percentage}%"
     },
     "clock#cal": {
-        "format": "{:%a %b %d}"
+        "format": "{:%a %b %d}",
+        "tooltip-format": "<tt>{calendar}</tt>"
     }
 }
