--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,7 +1,8 @@
-theme = "gruvbox_dark_soft"
+theme = "gruvbox-material"
 
 [keys.normal]
 esc = ["collapse_selection", "keep_primary_selection"]
+# A-S-b = "@ms*ms*"
 
 [editor]
 true-color = true
@@ -9,6 +10,7 @@ line-number = "relative"
 mouse = false
 scrolloff = 10
 bufferline = "always"
+shell = ["fish", "-c"]
 
 [editor.cursor-shape]
 insert = "bar"
@@ -22,3 +24,4 @@ render = true
 
 [editor.soft-wrap]
 enable = true
+wrap-at-text-width = true
